Try to fix mobile alignment

--- a/static/css/styles-available_creations.css
+++ b/static/css/styles-available_creations.css
@@ -44,6 +44,7 @@ button {
     padding: 20px;
     padding: 0 4px;
     margin: auto;
+    vertical-align: middle;
     /*flex-direction: column;
     align-self: center;*/
 }
